tests/invalid/import_call_non_function_module_attr/main.py
import provider

x: int = provider.value()
